Fix missing map on mobile

--- a/src/dashboards/Chrono/styles.scss
+++ b/src/dashboards/Chrono/styles.scss
@@ -143,6 +143,7 @@
             }
         }
         .maptile {
+            height: 630px;
             max-height: unset;
             width: 100%;
         }
